--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 license = "MIT"
 
 [dependencies]
-godot = "0.2.4"
+godot = { version = "0.3.5", features = ["register-docs"] }
 
 [lib]
 crate-type = ["cdylib"] # Compile this crate to a dynamic C library.
